Updated the wally and project files

--- a/default.project.json
+++ b/default.project.json
@@ -1,14 +1,4 @@
 {
 	"name": "DataStructures",
-	"tree": {
-		"$className": "DataModel",
-		"ReplicatedStorage": {
-			"$className": "ReplicatedStorage",
-			"$ignoreUnknownInstances": true,
-			"DataStructures": {
-				"$path": "src/DataStructures",
-				"$ignoreUnknownInstances": true
-			}
-		}
-	}
+	"tree": {"$path": "src/DataStructures"}
 }
