--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
 	"editor.formatOnSave": true,
 	"editor.formatOnType": true,
+	"rojo.buildFileFormat": "Binary",
+	"rojo.releaseBranch": "7.x",
 }
